--- a/.env
+++ b/.env
@@ -1,17 +1,4 @@
-REACT_APP_CANDY_MACHINE_ID=Candy_Machine_Publickey
+REACT_APP_CANDY_MACHINE_ID=BRDbQw2TxCsTLnhYftJeA3BPqiLAwnFW9re6MJ2eE5kX
 
-REACT_APP_SOLANA_NETWORK=devnet
-REACT_APP_SOLANA_RPC_HOST=https://api.devnet.solana.com
-
-
-
-
-# ADDITIONAL PARAMS TO SET IF USING SPL-TOKEN AS MINTING CURRENCY ONLY :
-# Spl-Token symbol to display next the price
-REACT_APP_SPL_TOKEN_TO_MINT_NAME=
-
-# Spl-token decimals place defined on creation (default is 9)
-REACT_APP_SPL_TOKEN_TO_MINT_DECIMALS=
-
-# To avoid harmless compilation warnings generating a build error, keep CI set to false
-CI=false
+REACT_APP_SOLANA_NETWORK=mainnet-beta
+REACT_APP_SOLANA_RPC_HOST=https://solana--mainnet.datahub.figment.io/apikey/55bd258945ff647bed02fad5d592c7a2
